testing to fix the phone overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,7 @@
 html,
 body {
   scroll-behavior: smooth;
+  position: fixed;
 }
 
 
